@@ -166,6 +166,8 @@ preference_general_round_button_numbers=Round button numbers
 preference_general_round_button_numbers_tt=Rounds the numbers on machine- and belts/lanes-buttons
 preference_production_title=Production table columns
 preference_production_title_tt=This allows you to enable some additional columns in the production table
+preference_production_toggle_column=Toggle recipes
+preference_production_toggle_column_tt=Adds a column with a checkbox to quickly disable a recipe
 preference_production_pollution_column=Pollution
 preference_production_pollution_column_tt=Adds a column displaying the pollution produced by this recipe
 preference_production_line_comment_column=Recipe comments
